// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`encoding Commands Stream 1`] = `"\\"Stream\\""`;

exports[`encoding Commands UdevCommand 1`] = `"{\\"UdevCommand\\":{\\"Add\\":\\"\\\\\\"foo\\\\\\"\\"}}"`;

exports[`encoding Commands ZedCommand 1`] = `"{\\"ZedCommand\\":\\"Init\\"}"`;

exports[`encoding Udev commands Add 1`] = `
"{
  \\"UdevCommand\\": {
    \\"Add\\": \\"\\\\\\"foo\\\\\\"\\"
  }
}"
`;

exports[`encoding Udev commands Change 1`] = `
"{
  \\"UdevCommand\\": {
    \\"Change\\": \\"\\\\\\"foo\\\\\\"\\"
  }
}"
`;

exports[`encoding Udev commands Remove 1`] = `
"{
  \\"UdevCommand\\": {
    \\"Change\\": \\"\\\\\\"foo\\\\\\"\\"
  }
}"
`;

exports[`encoding ZED commands AddVdev 1`] = `
"{
  \\"ZedCommand\\": {
    \\"AddVdev\\": [
      \\"0x6b289bd5ee51b853\\"
    ]
  }
}"
`;

exports[`encoding ZED commands CreateZfs 1`] = `
"{
  \\"ZedCommand\\": {
    \\"CreateZfs\\": [
      \\"0x6b289bd5ee51b853\\",
      \\"test/ds\\"
    ]
  }
}"
`;

exports[`encoding ZED commands CreateZpool 1`] = `
"{
  \\"ZedCommand\\": {
    \\"CreateZpool\\": [
      \\"test\\",
      \\"0x6b289bd5ee51b853\\",
      \\"ACTIVE\\"
    ]
  }
}"
`;

exports[`encoding ZED commands DestroyZPool 1`] = `
"{
  \\"ZedCommand\\": {
    \\"DestroyZpool\\": [
      \\"0x6b289bd5ee51b853\\"
    ]
  }
}"
`;

exports[`encoding ZED commands DestroyZfs 1`] = `
"{
  \\"ZedCommand\\": {
    \\"DestroyZfs\\": [
      \\"0x6b289bd5ee51b853\\",
      \\"test/ds\\"
    ]
  }
}"
`;

exports[`encoding ZED commands ExportZPool 1`] = `
"{
  \\"ZedCommand\\": {
    \\"ExportZpool\\": [
      \\"0x6b289bd5ee51b853\\",
      \\"EXPORTED\\"
    ]
  }
}"
`;

exports[`encoding ZED commands ImportZPool 1`] = `
"{
  \\"ZedCommand\\": {
    \\"ImportZpool\\": [
      \\"test\\",
      \\"0x6b289bd5ee51b853\\",
      \\"ACTIVE\\"
    ]
  }
}"
`;

exports[`encoding ZED commands Init 1`] = `
"{
  \\"ZedCommand\\": \\"Init\\"
}"
`;

exports[`encoding ZED commands SetZpoolProp 1`] = `
"{
  \\"ZedCommand\\": {
    \\"SetZpoolProp\\": [
      \\"0x6b289bd5ee51b853\\",
      \\"lustre:mgsnode\\",
      \\"10.14.82.0@tcp:10.14.82.1@tcp\\"
    ]
  }
}"
`;
